[tool.poetry]
name = "azely"
version = "0.7.0"
description = "Computation and plotting of azimuth and elevation for astronomical objects"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = [ "astronomy", "azimuth", "elevation", "ephemeris", "sidereal-time" ]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/azely/"
documentation = "https://astropenguin.github.io/azely/"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
astropy = "^5.2"
pandas = "^1.5"
pandas-stubs = "^1.5"
python-dateutil = "^2.8"
pytz = "^2023.3"
requests = "^2.29"
timezonefinder = "^6.2"
toml = "^0.10"
tomlkit = "^0.11"

[tool.poetry.dev-dependencies]
black = "^23.3"
ipython = "^8.12"
matplotlib = "^3.7"
myst-parser = "^1.0"
pydata-sphinx-theme = "^0.13"
pytest = "^7.3"
sphinx = "^6.2"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
