[tool.poetry]
name = "azely"
version = "0.7.0"
description = "Computation and plotting of azimuth and elevation for astronomical objects"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = [ "astronomy", "azimuth", "elevation", "ephemeris", "sidereal-time" ]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/azely/"
repository = "https://github.com/astropenguin/azely/"
documentation = "https://astropenguin.github.io/azely/"

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
astropy = "^5.0"
pandas = "^1.5 | ^2.0"
pandas-stubs = "^1.5 | ^2.0"
python-dateutil = "^2.8"
pytz = "^2023.3"
timezonefinder = "^6.2"
tomlkit = "^0.12"
ipinfo = "^4.4"

[tool.poetry.dev-dependencies]
black = "^23.12"
ipython = "^8.18"
matplotlib = "^3.7"
myst-parser = "^2.0"
pydata-sphinx-theme = "^0.13"
pytest = "^7.4"
sphinx = "^7.2"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
