[project]
name = "azely"
version = "1.0.0"
description = "Azimuth/elevation calculator for astronomical objects"
readme = "README.md"
keywords = [
    "astronomy",
    "azimuth",
    "elevation",
    "ephemeris",
    "sidereal-time",
    "visibility",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "astropy>=6,<8",
    "dateparser>=1,<2",
    "ipinfo>=4,<6",
    "matplotlib>=3,<4",
    "numpy>=2,<3",
    "pandas>=2,<3",
    "pandas-stubs>=2,<3",
    "python-dateutil>=2,<3",
    "timezonefinder>=6,<7",
    "tomlkit>=0.10,<1.0",
    "typing-extensions>=4,<5",

]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://astropenguin.github.io/azely/1.0.0"
repository = "https://github.com/astropenguin/azely"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25,<26",
    "ipython>=8,<10",
    "myst-parser>=3,<5",
    "pydata-sphinx-theme>=0.15,<1.0",
    "pyright>=1,<2",
    "pytest>=8,<9",
    "sphinx>=7,<9",
]

[tool.pyright]
typeCheckingMode = "basic"
